<resources>
    <string name="app_name">PorTuSalud</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Por Tu Salud</string>
    <string name="nav_header_subtitle">UPC - 2020</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_close">Cerrar Sesión</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_login">Login</string>
    <string name="menu_campus">Sedes</string>
    <string name="menu_contact">Contacto</string>
    <string name="menu_item1">Comunicación</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_myinfo">Datos</string>
    <string name="menu_closesession">Cerrar Sesión</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Inicio</string>
    <string name="title_registry">Cita</string>
    <string name="title_report">Historial</string>
    <string name="title_detail">Datos de Cita</string>
    <string name="paciente">Paciente</string>
    <string name="especialidad">Especialidad</string>
    <string name="medico">Médico</string>
    <string name="sede">Sede</string>
    <string name="seguro">Seguro</string>
    <string name="consultorio">Consultorio</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="tipo_cita">Tipo de Cita</string>

    <!-- Login fragment -->
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_login">Ingresar</string>
    <string name="login_register">Registrar</string>
    <string name="login_forgot">Olvidé contraseña</string>
    <string name="login_emptyUsername">Por favor ingrese su nombre de usuario</string>
    <string name="login_emptyPassword">Por favor ingrese su contraseña</string>
    <string name="login_wrongLogin">El usuario o contraseña es incorrecto</string>
    <string name="login_wrongLoginShort">Usuario o contraseña incorrecto</string>

    <!-- Login new user -->
    <string name="newUser_Title">Registrar Nuevo Paciente</string>
    <string name="newUser_DocumentNumber">Número de Documento</string>
    <string name="newUser_FirstName">Nombres</string>
    <string name="newUser_LastName">Apellidos</string>
    <string name="newUser_Gender">Sexo</string>
    <string name="newUser_rbMale">Masculino</string>
    <string name="newUser_rbFemale">Femenino</string>
    <string name="newUser_Birthdate">Fecha Nacimiento</string>
    <string name="newUser_PhoneNumber">Teléfono</string>
    <string name="newUser_eMail">Correo</string>
    <string name="newUser_BloodType">Tipo de Sangre</string>
    <string name="newUser_Weight">Peso</string>
    <string name="newUser_Height">Altura</string>

    <string name="newUser_Password">Contraseña</string>
    <string name="newUser_btnBack">Regresar</string>
    <string name="newUser_btnSave">Grabar</string>

    <string name="newUser_msgSave">Se creó el paciente</string>

    <string name="newUser_HintDocumentNumber">Ingresar el número de documento</string>
    <string name="newUser_HintFirstName">Ingresar su nombre</string>
    <string name="newUser_HintLastName">Ingresar su apellido</string>
    <string name="newUser_HintSex">Seleccione su sexo</string>
    <string name="newUser_HintBirthdate">Ingresar su fecha de nacimiento</string>
    <string name="newUser_HintPhoneNumber">Ingresar su teléfono</string>
    <string name="newUser_HinteMail">Ingresar su correo</string>
    <string name="newUser_HintBloodType">Ingresar su tipo de sangre</string>
    <string name="newUser_HintWeight">Ingresar su peso</string>
    <string name="newUser_HintHeight">Ingresar su altura</string>
    <string name="newUser_HintPassword">Ingresar su contraseña</string>


    <!-- Centers fragment  -->
    <string name="centers_Title">Sedes</string>
    <string name="centers_btnShowAllCenters">Ver Sedes en Mapa</string>

    <!-- Update user -->
    <string name="changeUser_Title">Actualizar Datos del Paciente</string>
    <string name="changeUser_DocumentNumber">Número de Documento</string>
    <string name="changeUser_FirstName">Nombres</string>
    <string name="changeUser_LastName">Apellidos</string>
    <string name="changeUser_Gender">Sexo</string>
    <string name="changeUser_rbMale">Masculino</string>
    <string name="changeUser_rbFemale">Femenino</string>
    <string name="changeUser_Birthdate">Fecha Nacimiento</string>
    <string name="changeUser_PhoneNumber">Teléfono</string>
    <string name="changeUser_eMail">Correo</string>
    <string name="changeUser_BloodType">Tipo de Sangre</string>
    <string name="changeUser_Weight">Peso</string>
    <string name="changeUser_Height">Altura</string>
    <string name="changeUser_Password">Contraseña</string>
    <string name="changeUser_btnBack">Regresar</string>
    <string name="changeUser_btnSave">Grabar</string>

    <string name="changeUser_msgSave">Se actualizaron los datos del paciente</string>


    <!-- confirmacion de cita -->
    <string name="RegistryConfirmation_title">Confirmación</string>
    <string name="RegistryConfirmation_tvMessage">Cita reservada correctamente</string>
    <string name="RegistryConfirmation_btnContinue">Continuar</string>
    <string name="RegistryConfirmation_tvPhotoToolTip">*Toque la cámara para tomar una foto</string>

    <!-- Login password recovery -->
    <string name="passwordRecovery_Title">Recuperar contraseña</string>
    <string name="passwordRecovery_Username">Usuario</string>
    <string name="passwordRecovery_btnBack">Regresar</string>
    <string name="passwordRecovery_btnSend">Enviar</string>
    <string name="newUser_msgSend">Revise su correo electrónico</string>
    <string name="passwordRecovery_msgEmptyUsername">Por favor ingrese su usuario</string>
    <string name="passwordRecovery_msgSend">Revise su correo electrónico</string>

    <!-- New user confirmation fragment -->
    <string name="new_user_confirmation_btnLogin">Continuar</string>

    <!-- Bottom Navigation -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Shared Validation String Values -->
    <string name="validation_msgRequiredField">"El campo es requerido"</string>
    <string name="validation_msgInvalidEmail">"El correo es inválido"</string>
    <string name="validation_msgInvalidPhone">"El teléfono es inválido"</string>
    <string name="validation_msgInvalidGender">"Seleccione un género"</string>
    <string name="validation_msgInvalidBirthdate">"Fecha de cumpleaños inválido"</string>
    <string name="validation_msgLenghtField">La longitud del campo excede el límite permitido</string>
    <string name="validation_msgLessoeEqualThanZero">"El campo no puede ser igual o menor a 0"</string>
    <string name="msgNoInformation">No existe información</string>
    <string name="msgInsertUpdateWSError">Hubo un error al grabar</string>
    <string name="msgInsertUpdateWSError2">Hubo un error al grabar Cita</string>
    <string name="titSelectImagesTitle">Seleccione una o varias imágenes</string>
    <string name="google_maps_key">AIzaSyAAWhk6G9HsZYPNWYJXrSk1umiG2DhrCYc</string>


</resources>