<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appclinica.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_centers"
        android:name="com.example.appclinica.ui.centers.CentersFragment"
        android:label="@string/menu_campus"
        tools:layout="@layout/fragment_centers" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.appclinica.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.appclinica.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.appclinica.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_contact" />

<!--    <fragment-->
<!--        android:id="@+id/nav_session"-->
<!--        android:name="com.example.appclinica.ui.session.SessionFragment"-->
<!--        android:label="@string/menu_share"-->
<!--        tools:layout="@layout/fragment_session" />-->

    <fragment
        android:id="@+id/nav_myinfo"
        android:name="com.example.appclinica.ui.user.ChangeUserFragment"
        android:label="@string/menu_myinfo"
        tools:layout="@layout/fragment_change_user"/>

    <activity
        android:id="@+id/nav_session"
        android:name="com.example.appclinica.LoginActivity"
        android:label="@string/menu_closesession"
        tools:layout="@layout/activity_login"/>

    <fragment
        android:id="@+id/bottom_home"
        tools:layout="@layout/fragment_home"
        android:label="@string/title_home"
        android:name="com.example.appclinica.ui.home.HomeFragment"/>

    <fragment
        android:id="@+id/bottom_registry"
        tools:layout="@layout/fragment_registry_paso1"
        android:label="@string/title_registry"
        android:name="com.example.appclinica.ui.registry.RegistryPaso1Fragment"/>

    <fragment
        android:id="@+id/bottom_report"
        tools:layout="@layout/fragment_report"
        android:label="@string/title_report"
        android:name="com.example.appclinica.ui.report.ReportFragment"/>

</navigation>