<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!-- Provisional -->
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/menu_login"
            android:title="Login" />
        <!-- Provisional -->

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_campus"
            android:icon="@drawable/menu_campus"
            android:title="@string/menu_campus" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/menu_contact"
            android:title="@string/menu_contact" />
    </group>

    <item android:title="@string/menu_item1">
        <menu>
            <item
                android:title="@string/menu_share"
                android:icon="@drawable/ic_menu_share"
                android:id="@+id/nav_share"/>
            <item
                android:title="@string/menu_send"
                android:icon="@drawable/ic_menu_send"
                android:id="@+id/nav_send"/>
        </menu>
    </item>

    <item android:title="Opciones">
        <menu>
            <item
                android:title="@string/menu_close"
                android:icon="@drawable/menu_logout"
                android:id="@+id/nav_session"/>
        </menu>
    </item>

</menu>