<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.NewUserFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/newuser" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="22dp"
        android:text="@string/newUser_Title"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_DocumentNumber"/>

    <EditText android:layout_width="fill_parent"
        android:id="@+id/tbDocumentNumber"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/newUser_HintDocumentNumber"
        android:singleLine="true"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_FirstName"/>

    <EditText
        android:id="@+id/tbFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/newUser_HintFirstName"
        android:singleLine="true" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_LastName"/>

    <EditText
        android:id="@+id/tbLastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/newUser_HintLastName"
        android:singleLine="true" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_Sex"/>

    <Spinner
        android:id="@+id/spSex"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_Birthdate"/>

    <EditText
        android:id="@+id/dpBirthdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/newUser_HintBirthdate"
        android:ems="10"
        android:inputType="date" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_PhoneNumber"/>

    <EditText
        android:id="@+id/tbPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:hint="@string/newUser_HintPhoneNumber"
        android:inputType="phone"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_eMail"/>

    <EditText
        android:id="@+id/tbeMail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:hint="@string/newUser_HinteMail"
        android:inputType="textEmailAddress"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_BloodType"/>

    <EditText
        android:id="@+id/tbeBloodType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/newUser_HintBloodType"
        android:singleLine="true"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/newUser_Password"/>

    <EditText
        android:id="@+id/tbePassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:hint="@string/newUser_HintPassword"
        android:inputType="textPassword" />


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:text="@string/newUser_btnBack" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/newUser_btnSave" />
    </RelativeLayout>
</LinearLayout>
</ScrollView>