<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.ChangeUserFragment">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/edituser" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/changeUser_Title"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_DocumentNumber"/>

        <EditText android:layout_width="fill_parent"
            android:id="@+id/tbDocumentNumber"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_FirstName"/>

        <EditText
            android:id="@+id/tbFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_LastName"/>

        <EditText
            android:id="@+id/tbLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_Sex"/>

        <Spinner
            android:id="@+id/spSex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_Birthdate"/>

        <EditText
            android:id="@+id/dpBirthdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="date" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_PhoneNumber"/>

        <EditText
            android:id="@+id/tbPhoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:inputType="phone"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_eMail"/>

        <EditText
            android:id="@+id/tbeMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_BloodType"/>

        <EditText
            android:id="@+id/tbeBloodType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorlabels"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changeUser_Password"/>

        <EditText
            android:id="@+id/tbePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="70dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:text="@string/changeUser_btnSave" />
    </LinearLayout>
</ScrollView>