<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.PasswordFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/forgotpassoword" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="22dp"
        android:text="@string/passwordRecovery_Title"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorlabels"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/passwordRecovery_Username"/>

    <EditText android:layout_width="fill_parent"
        android:id="@+id/tbDocumentNumber"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:singleLine="true"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:layout_alignParentLeft="true"
            android:text="@string/passwordRecovery_btnBack" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_alignParentRight="true"
            android:text="@string/passwordRecovery_btnSend" />
    </RelativeLayout>
</LinearLayout>